[package]
authors = ["Scott MacDonald <scott@smacdo.com>"]
categories = ["command-line-utilities", "games"]
description = "Generate potential solutions for the NYT spelling bee game"
edition = "2021"
keywords = ["cli", "puzzle", "spellingbee", "games"]
license = "Apache-2.0"
name = "bumblebee"
readme = "README.md"
repository = "https://github.com/smacdo/bumblebee"

version = "0.2.0"

[dependencies]
clap = {version = "3.1", features = ["derive"]}
