[package]
authors = ["Scott MacDonald <scott@smacdo.com>"]
categories = ["command-line-utilities", "games"]
description = "Generate potential solutions for the NYT spelling bee game"
edition = "2021"
keywords = ["cli", "spellingbee", "games", "library", "program"]
license = "Apache-2.0"
name = "spellingbee"
readme = "README.md"
repository = "https://github.com/smacdo/spellingbee"

version = "0.3.0"

[dependencies]
clap = {version = "3.1", features = ["derive"]}
